- popup close icon set which is overlaped by twitter icon in calendar detail popup - Height issue in mobile calendar

--- a/src/pages/schedule/Schedule.css
+++ b/src/pages/schedule/Schedule.css
@@ -162,3 +162,6 @@ display: flex;
 .schedule-popup{
     height:100%;
 }
+.rbc-overlay-header {
+    color:#ffffff !important;
+  }
